<resources>
    <string name="app_name">Vis                                                                                                                                                                                                                                                                                     </string>
    <string name="server">stg.valuationintelligentsystem.com</string>
    <string name="api_intermediary_path">apis</string>
    <string name="api_key">AIzaSyALTsVJy_Py_INw-TFmLqdU9lGHQHiqX2k</string>
    <string name="open">Open</string>
    <string name="videoPath">http://stg.valuationintelligentsystem.com/assets/admin/clien_doc/VIS0_</string>
    <string name="login">login</string>
    <string name="reassignCase">reassignCase</string>
    <string name="GetUploadedDocuments">GetUploadedDocuments</string>
    <string name="SurveyNotRequired">SurveyNotRequired</string>
    <string name="getLeads">getLeads</string>
    <string name="SkipSurveyList">SkipSurveyList</string>
    <string name="ReassignCaseList">ReassignCaseList</string>
    <string name="form_submission">PostGeneralSurveyInfo</string>
    <string name="ViewNotification">ViewNotification</string>
    <string name="verify_otp">otpVerification</string>
    <string name="GetCompletedCases">GetCompletedCases</string>
    <string name="resent_otp">resendOtp</string>
    <string name="log_out">logout</string>
    <string name="get_master_data">getMasterData</string>
    <string name="get_Leads">get_Leads</string>
    <string name="PostDocuments">PostDocuments</string>
    <string name="UploadFile">UploadFile</string>
    <string name="UploadPropertyImage">UploadPropertyImage</string>
    <string name="caseAcceptReject">caseAcceptReject</string>
    <string name="GetLeadById">GetLeadById</string>
    <string name="GetCompleteLeadById">GetCompleteLeadById</string>
    <string name="get_preliminary_data">getPreliminary</string>
    <string name="LastSavedAssetForm">LastSavedAssetForm</string>
    <string name="calling">calling</string>
    <string name="SendSupportEmail">SendSupportEmail</string>
    <string name="SendBoundarySchdMail">SendBoundarySchdMail</string>
    <string name="SaveSurveyLocation">SaveSurveyLocation</string>
    <string name="GetAreaMeasurement">GetAreaMeasurement</string>
    <string name="PostPreliminary">PostPreliminary</string>
    <string name="upload_doc">upload_doc</string>
    <string name="register">register</string>
    <string name="get_schedule">get_schedule</string>
    <string name="post_schedule">post_schedule</string>
    <string name="reschedule">reschedule</string>
    <string name="get_media">GetMedia</string>
    <string name="PostBasicSurveyInfo">PostBasicSurveyInfo</string>
    <string name="SendPropertyNotIdentifiedMail">SendPropertyNotIdentifiedMail</string>
    <string name="SendReasonForApproval">SendReasonForApproval</string>
    <string name="GetBasicSurveyInfo">GetBasicSurveyInfo</string>
    <string name="GetGeneralSurveyInfo">GetGeneralSurveyInfo</string>
    <string name="post_locator">PostMedia</string>
    <string name="priliminary_dailog">To fill the Preliminary form, please take reference from the saved documents of the property.</string>
    <string name="mail">Are you sure you want to add documents?</string>
    <string name="login_text">Please enter your registered mobile number to sign in</string>
    <string name="login_otp">Please enter the verification code send to your mobile number</string>
    <string name="title_activity_otp">OTP</string>
    <string name="cannot_be_blank">Cannot be blank</string>
    <string name="doc_info">No Schedule mentioned in the legal document.(In this situation email to the Bank and the owner of non-availability of the schedule of the property for proper indentification of it)</string>
    <string name="agreeText">I agree to pay the amount mentioned above for the preparation of Valuation Report. I agree that I’ll not put pressureon Valuer firm to distort any facts and would not try to influence any member or official of the firm in the ill spirit orvested interest and to benefit any individual or organization by any means illegitimately.</string>
    <string name="land1">\"Mark here Any important known place like nearest market, shopping complex, important shop, showroom, metro station, bus stand, hospital, etc.\"</string>
    <string name="land2">\"Mark here Main road or any important nearby road.\"</string>
    <string name="land3">\"Mark here Any other point of importance within the locality of subject property like park, local community shop, community centre, etc.\"</string>
    <string-array name="property_array">
        <item>Multi-Storied Flats</item>
        <item>Property Other Than Flats</item>
        <item>Industrial</item>
        <item>Special Assets</item>
        <item>Group Housing</item>

    </string-array>
    <string-array name="boundry_array">
        <item>East</item>
        <item>West</item>
        <item>North</item>
        <item>South</item>

    </string-array>
    <string-array name="place_array">
        <item>restaurant</item>
        <item>hospital</item>
        <item>school</item>

    </string-array>
    <string name="text2">I confirm that I have done the Survey of the asset properly as per the fair professional best practices and
Valuation &amp; Survey policy guidelines issued by the organization. I have not taken any cash or kind from the
customer or given the customer any wrong or false information or have made any false claims for arbitrary
providing the Asset Valuation as per one’s need or requirement by distorting the facts. In case at any point of
time it is found that I have done any kind of fraudulent activity in this case and misled the company then I
understand its legal consequences and appropriate penal action which company can take against me. Also in
regard to it any monetary or reputation loss will be recovered from me.</string>
    <string name="text1">I confirm that the property is inspected in front of me and I have provided all the information true to the best of
my knowledge. I understand that any false information provided by me will lead to incorrect valuation report
and I’d be solely responsible for it and will bear the charges for the changes/ modifications which have to
undergo due to the false information. I also undertake that I haven’t given any cash or in kind to any member of
R.K Associates to influence the Value of the Property or favor any individual or organization and the same is not
accepted or asked by the member of R.K Associates. Any such act will lead to cancellation of the material
prepared by R.K Associates with forfeiting of the fees and i’ll be completely responsible for its repercussions
and legal actions taken for it.\n\n
        IMPORTANT: We have not authorized any of our Surveyor to take Cash or kind from the customers directly. In
case Surveyor or any member of R.K Associates asks for any money or kind from you then kindly please inform
on number +91-9999597597. Our Valuation process is very stringent and have multiple check points to ensure
correct &amp; error free reports to keep the lending agency risk free. In case Surveyor claims that he would be able
to arbitrary effect the Valuation figures unfairly or as per your requirement &amp; need then he is making a false
claim to you and we request you to complaint such act immediately on the number provided above.</string>
    <string name="agreeTextt">9. I agree to pay the amount mentioned above for the preparation of Valuation Report. I agree that I’ll not put pressure
on Valuer firm to distort any facts and would not try to influence any member or official of the firm in the ill spirit or
vested interest and to benefit any individual or organization by any means illegitimately.</string>
    <string name="beautiful">Beautiful</string>
    <string name="_25_garden_landscaping">25. Garden/ Landscaping</string>
    <string name="excellent">Excellent</string>
    <string name="ordinary">Ordinary</string>
    <string name="available_within_the_property">Available within the property</string>
    <string name="title_activity_special_assets_dynamic_view">SpecialAssetsDynamicView</string>
    <string name="external_dir">GetSignature</string>
    <string name="lbl_new_note_title">New Data</string>
    <string name="lbl_edit_note_title">Edit Data</string>
    <string name="msg_no_notes">No Data found!</string>
    <string name="b_land_area">b. Land Area<font color='red'>*</font></string>
    <string name="b_land_area_">c. Land Area<font color='red'>*</font></string>
    <string name="b_land_area_init">ii. Land Area<font color='red'>*</font></string>
    <string name="b_land_area_init_">iii. Land Area<font color='red'>*</font></string>
    <string name="d_in_case_of_difference_of_init">iii. In case of difference of more than 5% between the papers and site survey then reason for the same<font color='red'>*</font></string>
    <string name="d_in_case_of_difference_of_init_">iv. In case of difference of more than 5% between the papers and site survey then reason for the same<font color='red'>*</font></string>
    <string name="d_ground_coverage">d. Ground Coverage<font color='red'>*</font></string>
    <string name="d_ground_coverage_">e. Ground Coverage<font color='red'>*</font></string>
    <string name="d_ground_coverage_init">iv. Ground Coverage<font color='red'>*</font></string>
    <string name="d_ground_coverage_init_">v. Ground Coverage<font color='red'>*</font></string>
    <string name="f_covered_built_up_area_init">v. Covered Built-up Area<font color='red'>*</font></string>
    <string name="f_covered_built_up_area_init_">vi. Covered Built-up Area<font color='red'>*</font></string>
    <string name="new_cases">New Cases</string>
    <string name="accepted_cases">Accepted Cases</string>
    <string name="scheduled_cases">Scheduled Cases</string>
    <string name="a_name">a. Name<font color='red'>*</font></string>
    <string name="b_date">b. Date<font color='red'>*</font></string>
    <string name="c_mobilee">c. Mobile No.<font color='red'>*</font></string>
    <string name="undertaking_by_customer_text">I confirm that the property is inspected in front of me and I have provided all the information true related to the property to the best of my knowledge. I understand that any false or manipulative information provided by me will be considered as cheating with the professional organization since it will lead to incorrect valuation report and I’d be solely responsible for this unlawful act and will bear the charges for the changes/ modifications which have to undergo due to the false information by me. I also undertake that I haven’t given any cash or in kind to any member of R.K Associates to influence the Value of the Property or favor any individual or organization and the same is not accepted or asked by the member of R.K Associates. Any such act will lead to cancellation of the material prepared by R.K Associates with forfeiting of the fees and i’ll be completely responsible for its repercussions and legal actions taken for it.</string>
    <string name="undertaking_by_important">\n\nIMPORTANT: We have not authorized any of our Surveyor to take Cash or kind from the customers in any situation. In case Surveyor or any member of R.K Associates asks for any money or kind from you then kindly please inform on number +91-9958632707. Our Valuation process is very stringent and have multiple check points to ensure fair, unbiased, correct &amp; error free reports to ensure highest level of integrity. In case Surveyor claims that he would be able to arbitrary effect the Valuation figures unfairly or as per your requirement &amp; need then he is making a false claim to you and we request you to complaint such act immediately on the number provided above.</string>
</resources>