<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vis.android.Activities.General.Fragments.GeneralForm10">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/rr_header"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/grey"
                android:gravity="center"
                android:paddingLeft="@dimen/_10sdp"
                android:text="Undertaking by Customer"
                android:textColor="@color/blue_view"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="end|left"
                android:text="@string/undertaking_by_customer_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:justificationMode="inter_word"
                android:textColor="@color/blue_view"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="end|left"
                android:text="@string/undertaking_by_important"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/rectangle_corner">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:textColor="@color/black"
                        android:paddingRight="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_toLeftOf="@+id/rlSpinnerUnit2"
                        android:background="@drawable/rectangle_corner">

                        <EditText
                            android:id="@+id/etDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/_5sdp"
                            android:singleLine="true"
                            android:textSize="@dimen/_12sdp" />
                    </RelativeLayout>
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_mobilee"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_toLeftOf="@+id/rlSpinnerUnit2"
                        android:background="@drawable/rectangle_corner">

                        <EditText
                            android:id="@+id/etMobileNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            android:maxLength="10"
                            android:paddingLeft="@dimen/_5sdp"
                            android:singleLine="true"
                            android:textSize="@dimen/_12sdp" />
                    </RelativeLayout>
                </RelativeLayout>


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlTvsign"
                android:background="@color/greyy"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_7sdp">

                <TextView
                    android:id="@+id/tvSign"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:text="Signature"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center"
                android:src="@android:color/transparent"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvPrevious"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@color/grey_bg"
            android:gravity="center"
            android:text="PREVIOUS"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />


        <TextView
            android:id="@+id/tvNext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@color/app_header"
            android:gravity="center"
            android:text="NEXT"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />


    </LinearLayout>
</RelativeLayout>
